--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,7 +5,7 @@
                     <form action="/register" method="post">
                         <div class="form-group">
                             <label for="email">Email address</label>
-                            <input type="text" class="form-control" id="email" placeholder="Enter email" name="email" value="data.email">
+                            <input type="text" class="form-control" id="email" placeholder="Enter email" name="email" value="{{data.email}}">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
