--- a/views/register.hbs
+++ b/views/register.hbs
@@ -7,7 +7,7 @@
             <p>Register to get ideas and view the latest masterpieces.</p>
 
             <label for="username">Username:</label>
-            <input type="text" id="username" placeholder="ivan_00" name="username">
+            <input type="text" id="username" placeholder="ivan_00" name="username" value="{{data.username}}">
 
             <label for="password">Password:</label>
             <input type="password" id="password" placeholder="*****" name="password">
