FINISH THE APPLICATION WITH THE BONUS TASK

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,7 +23,7 @@
         <nav>
 
             <img src="/static/img/art-logo.png" alt="logo">
-            <a href="/catalog">ArtGallery</a>
+            <a href="/">ArtGallery</a>
 
             <ul class="menu">
                 <li><a href="/catalog">Gallery</a></li>
