--- a/views/details.hbs
+++ b/views/details.hbs
@@ -17,7 +17,7 @@
                                 {{#if isShared}}
                             <p class="shared-pub">You already shared this publication</p>
                                 {{else}}
-                            <a href="/share" class="btn-share">Share publication</a>
+                            <a href="/share/{{_id}}" class="btn-share">Share publication</a>
                             {{/if}}
                         </div>
                             {{/if}}
