--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,8 +1,7 @@
 <section id="edit-container">
     <div class="edit-container-info">
-        {{#with publication}}
-        <img src="{{picture}}" alt="image">
-
+        <img src="/static/img/blog-img12.jpg" alt="image">
+            {{#with publication}}
         <form action="/edit/{{_id}}" method="post" class="container-text">
             <h2>Edit</h2>
             <p>Edit your masterpiece!</p>
