--- a/views/partials/homePreview.hbs
+++ b/views/partials/homePreview.hbs
@@ -1,6 +1,6 @@
 <article class="content-publication">
     <h1>Title: {{title}}</h1>
 
-    <p>Number of people shared the publication: 0</p>
+    <p>Number of people shared the publication: {{shares}}</p>
     <a href="/catalog" class="image-details">View publication</a>
 </article>
